--- a/generative-ai/diffusion/HairStep/slides/motivation.tex
+++ b/generative-ai/diffusion/HairStep/slides/motivation.tex
@@ -35,7 +35,7 @@
 \end{frame}
 
 %---------------------------------------------------------
-\begin{frame}{Motivation -- Visualization}
+\begin{frame}{Orientation Maps Challenges}
     \begin{figure}
         \centering
         \includegraphics[width=0.9\linewidth]{assets/figures/motivations/orientation-map.png}
